Retract the JVM memory comparison: 273MB was uncollected garbage, not a live set
Round 15 ended with "our reachable live set is 364MB, the JVM's entire heap is 273MB" and
projected from there that 32-bit references would still leave ~1.5x. The 273MB was not a
live set. It was G1's `used` at peak against a 1032MB ceiling -- mostly uncollected
garbage, because a JVM with that much headroom has no reason to collect. -Xlog:gc shows
this program provokes exactly ONE collection in a default JVM:

  GC(0) Pause Young (Normal) (G1 Evacuation Pause) 49M->12M(1032M) 7.241ms

Everything after that accumulates. Projecting a representation saving onto that number was
arithmetic on a figure that did not mean what it was used for, and the conclusion should
not have been stated.

THE COMPARABLE NUMBER IS WHAT EACH VM CAN COMPLETE IN:

  JDK 25  -Xmx64m   OutOfMemory, 11 of 798 files
          -Xmx96m   798 files, 239MB footprint, 1.28s
          default   798 files, ~485MB footprint, 0.75s
  parpar  default   798 files, ~680MB footprint, 1.00s
          128MB process budget -- did not complete, wedged (>2min against 1s)

So: the JVM does this job in a 96MB heap / 239MB process; we need ~680MB. That is 2.8x
against a frugal JVM and 1.4x against one left to sprawl. Neither is the
1.5x-after-32-bit-refs claim Round 15 made.

CONSERVATIVE ROOTS ARE NOT THE EXPLANATION, and that is now measured rather than assumed.
-DCN1_DISABLE_CONSERVATIVE_GC_ROOTS with its required codegen pairing (via
CN1_SELFHOST_JAVA_OPTS -- an earlier attempt used a variable name build-selfhost.sh
ignores, silently measuring frameless-with-precise-roots, which is the unsafe combination):

  base            737 680 678 MB   1.00-1.05s
  precise roots   602 563 670 MB   1.52-1.58s

-12% memory for +55% time. Worth about a tenth of the gap, and that tenth costs more than
it is worth.

Per object we are ~2x HotSpot on reference-bearing shapes (Object[] 225B against ~112B)
and at parity on primitive payload (char[] 27